--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<canvas id="myCanvas" width="800" height="400"> </canvas>
 <style>
 body{
 	background-image: url("concrete-road.jpg");
@@ -14,7 +15,6 @@ body{
 	background-color: white; 
 	border-style:ridge;
 }
-
 h1,h3,h4
 {
 	color: rgb(255, 241, 43) !important;
